networkmanager: Fix alignment of select dropdowns
These broke when switching away from bootstrap-select javascript.

--- a/pkg/networkmanager/networking.css
+++ b/pkg/networkmanager/networking.css
@@ -162,4 +162,6 @@ span.inverted-switchbox {
     width: 28px;
 }
 
-
+.bootstrap-select {
+    min-width: 150px;
+}
